# ashby-edu

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
data/: .gitkeep  casos.yaml  materiales.csv
src/ashby_edu/: __init__.py  app.py  ashby_chart.py  cases.py  data_loader.py  indices.py
tests/: test_ashby_chart.py  test_cases.py  test_data_loader.py  test_indices.py
