[project]
name = "ashby-edu"
version = "0.1.0"
description = "App web de selección de materiales por método gráfico de Ashby — UTEQ Ingeniería Industrial"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "kaleido>=0.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]